--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -22,6 +22,7 @@
     "@auth0/angular-jwt": "^4.0.0",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^4.4.1",
+    "bootswatch": "^4.5.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^5.6.1",
